docker-cats-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: docker-cats-network-policy
  namespace: docker-cats
spec:
  ### An empty podSelector selects all pods in the namespace.
  podSelector:
    matchLabels:
      app: docker-cats-baby
  ### If no policyTypes are specified on a NetworkPolicy then by default Ingress will always be set and Egress will be set if the NetworkPolicy has any egress rules.
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 172.17.1.0/24
        - namespaceSelector:
            matchLabels:
              project: myproject
        - podSelector:
            matchLabels:
              role: myrole
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/24
      ports:
        - protocol: TCP
          port: 8080

# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-all
# spec:
#   podSelector: {}
#   ingress:
#   - {}
#   egress:
#   - {}
#   policyTypes:
#   - Ingress
#   - Egress

# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: deny-all
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
#   - Egress
